Use Number.valueOf instead of new Number in simpleTypeConvert. Closes https://issues.apache.org/jira/browse/OFBIZ-1337
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@585596 13f79535-47bb-0310-9956-ffa450edef68